@@ -2,6 +2,8 @@ freebsd-glue (0.0.8) UNRELEASED; urgency=low
 
   * Include <grp.h> in <unistd.h> (for initgroups).
   * Add __containerof() to <sys/cdefs.h>.
+  * Add roundup2 in <sys/param.h>. It is no longer provided by glibc
+    (??).
 
  -- Robert Millan <rmh@debian.org>  Wed, 10 Jul 2013 00:12:06 +0200
 
